# python-math-services/swagger_server/controllers/info_controller.py
@@ -3,8 +3,6 @@ import six
 
 from swagger_server import util
 
-
-
 def app_health_get():  # noqa: E501
     """shows app info
 
@@ -13,26 +11,5 @@ def app_health_get():  # noqa: E501
 
     :rtype: None
     """
-    return 'do some magic!'
+    return 'System is working'
 
-
-def app_last_get():  # noqa: E501
-    """shows last (n) requested expressions
-
-     # noqa: E501
-
-
-    :rtype: None
-    """
-    return 'do some magic!'
-
-
-def app_top_get():  # noqa: E501
-    """shows top most requested expressions
-
-     # noqa: E501
-
-
-    :rtype: None
-    """
-    return 'do some magic!'
